# kgbuilder

./: pyproject.toml
kgbuilder/: helper.py  main.py  models.py
kgbuilder/convertors/: categories.py  commodities.py  deposit_types.py  mineral_site.py  mineral_system_v2.py  same_as.py  units.py
kgbuilder/input_validators/: generate_file_with_id.py  validate_schema_github_actions.py  validator_utils.py
